fix(Skills): Fixed spacing around FA icons

--- a/_sass/_bootstrap-overrides.scss
+++ b/_sass/_bootstrap-overrides.scss
@@ -14,6 +14,10 @@ $theme-colors: (
 
 }
 
+.list-inline-item {
+  margin-right: 0 !important;
+}
+
 a {
   color: $primary;
   &:hover,
