--- a/docs/assets/resume.css
+++ b/docs/assets/resume.css
@@ -1,4 +1,4 @@
-.bg-primary{background-color:#4966bd !important}.text-primary{color:#4966bd !important}a{color:#4966bd}a:hover,a:focus,a:active{color:#314788}.social-icons .list-inline-item i:hover{color:#314788}/*!
+.bg-primary{background-color:#4966bd !important}.text-primary{color:#4966bd !important}.list-inline-item{margin-right:0 !important}a{color:#4966bd}a:hover,a:focus,a:active{color:#314788}.social-icons .list-inline-item i:hover{color:#314788}/*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
  * Copyright 2011-2019 Twitter, Inc.
